Modify permission for user Added tests integration Separeted User and Security UserDetails Updated messages from server